--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
+  "name": "to-the-hubs",
+  "version": "0.0.0",
   "main": "./lib/to-the-hubs",
+  "description": "Open/blame the active editor on github.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atom/to-the-hubs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/atom/to-the-hubs/issues"
+  },
   "activationEvents": [
     "github:open",
     "github:blame"
-  ]
+  ],
+  "engines": {
+    "atom": "*"
+  },
+  "publishConfig": {
+    "registry": "https://atom.iriscouch.com/registry/_design/app/_rewrite"
+  },
 }
