Support opening a file's history on github.com

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "activationEvents": [
     "github:open",
-    "github:blame"
+    "github:blame",
+    "github:file-history"
   ],
   "engines": {
     "atom": "*"
