Change command name from "File History" to "History"
Context: https://github.com/atom/to-the-hubs/pull/3#discussion_r6227627

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "activationEvents": [
     "github:open",
     "github:blame",
-    "github:file-history"
+    "github:history"
   ],
   "engines": {
     "atom": "*"
