Update package description
Now that you can view the history for a file (in addition to viewing/blaming the
file), we need to generalize the package description.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-the-hubs",
   "version": "0.1.0",
   "main": "./lib/to-the-hubs",
-  "description": "Open/blame the active editor on github.com",
+  "description": "View the active file on github.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/atom/to-the-hubs.git"
