--- a/spec/fixtures/non-github-remote.git/config
+++ b/spec/fixtures/non-github-remote.git/config
@@ -6,7 +6,7 @@
 	ignorecase = true
 	precomposeunicode = false
 [remote "origin"]
-	url = https://git.example.com/some-user/some-repo.git
+	url = https://git.enterprize.me/some-user/some-repo.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [branch "master"]
 	remote = origin
