--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "View the active file on github.com",
   "repository": "https://github.com/atom/open-on-github",
   "activationEvents": [
-    "open-on-github:open",
+    "open-on-github:file",
     "open-on-github:blame",
     "open-on-github:history",
     "open-on-github:copy-url"
