--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./lib/open-on-github",
   "description": "View the active file on github.com",
   "repository": "https://github.com/atom/open-on-github",
+  "license": "MIT",
   "activationEvents": [
     "open-on-github:file",
     "open-on-github:blame",
