--- a/spec/fixtures/github-remote.git/config
+++ b/spec/fixtures/github-remote.git/config
@@ -8,6 +8,15 @@
 [remote "origin"]
 	url = https://github.com/some-user/some-repo.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
+[remote "upstream/color"]
+	url = https://github.com/some-other-user/some-other-repo.git
+	fetch = +refs/heads/*:refs/remotes/upstream/color/*
 [branch "master"]
 	remote = origin
 	merge = refs/heads/master
+[branch "foo/bar"]
+	remote = origin
+	merge = refs/heads/foo/bar
+[branch "baz"]
+	remote = upstream/color
+	merge = refs/heads/baz
