create new fixtures instead of using stubs

--- a/spec/fixtures/branch-with-slash-in-name.git/config
+++ b/spec/fixtures/branch-with-slash-in-name.git/config
@@ -8,6 +8,6 @@
 [remote "origin"]
 	url = https://github.com/some-user/some-repo.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
-[branch "master"]
+[branch "foo/bar"]
 	remote = origin
-	merge = refs/heads/master
+	merge = refs/heads/foo/bar
