--- a/spec/fixtures/remote-with-slash-in-name.git/config
+++ b/spec/fixtures/remote-with-slash-in-name.git/config
@@ -5,9 +5,9 @@
 	logallrefupdates = true
 	ignorecase = true
 	precomposeunicode = false
-[remote "origin"]
+[remote "upstream/color"]
 	url = https://github.com/some-user/some-repo.git
-	fetch = +refs/heads/*:refs/remotes/origin/*
-[branch "master"]
-	remote = origin
-	merge = refs/heads/master
+	fetch = +refs/heads/*:refs/remotes/upstream/color/*
+[branch "baz"]
+	remote = upstream/color
+	merge = refs/heads/baz
