--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "description": "View the active file on github.com",
   "repository": "https://github.com/atom/open-on-github",
   "license": "MIT",
-  "activationEvents": [
-    "open-on-github:file",
-    "open-on-github:blame",
-    "open-on-github:history",
-    "open-on-github:copy-url",
-    "open-on-github:branch-compare"
-  ],
+  "activationCommands": {
+    "atom-pane": [
+      "open-on-github:blame",
+      "open-on-github:branch-compare",
+      "open-on-github:copy-url",
+      "open-on-github:file",
+      "open-on-github:history"
+    ]
+  },
   "engines": {
     "atom": "*"
   },
