--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-on-github",
-  "version": "1.2.0-sync-git",
+  "version": "1.2.0",
   "main": "./lib/main",
   "description": "View the active file on github.com",
   "repository": "https://github.com/atom/open-on-github",
